# Phishing-URL-Extension

./: README.md  pyproject.toml  requirements.txt
Phishing-URL-Api-Testing/: Predict.yml  opencollection.yml
api/: main.py
core/: feature.py
extension-frontend/: dashboard.html  dashboard.js  manifest.json  popup.html  popup.js
pickle/: model.pkl  phishing_model.joblib
